--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "mongodb": "^5.9.2",
+    "mongoose": "^9.0.1",
     "next": "16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.1",
