--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "firebase": "^12.7.0",
     "mongodb": "^5.9.2",
     "mongoose": "^9.0.1",
     "next": "16.0.10",
