--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "firebase": "^12.7.0",
+    "lightningcss": "1.30.2",
     "mongodb": "^5.9.2",
     "mongoose": "^9.0.1",
     "next": "16.0.10",
